<resources>
    <string name="app_name">SanderDict</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="hint">Search in Dictionary</string>
    <string name="add_dictionary_from_dir">Add dictionary from dir</string>
    <string name="add_dictionary_from_net">Add dictionary from net</string>
    <string name="appwidget_text">SanderDict widget</string>
    <string name="configure">Configure</string>
    <string name="add_widget">OK</string>
    <string name="sanderdict">SanderDict</string>
    <string name="text_in_widget">No dictionary installed</string>
    <string name="autoupdate">Autoupdate</string>
    <string name="update_period">Update period</string>
    <string name="drawer_item_dictionaries">Dictionaries</string>
    <string name="drawer_item_favorite">Favorite</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_about">About</string>
    <string name="navigation_drawer_open">Open drawer</string>
    <string name="navigation_drawer_close">Close drawer</string>
    <string name="favorite">Favorite</string>
    <string name="noWordPassedToApp">No word passed to app</string>
    <string name="word">Word </string>
    <string name="didNotFound"> didn\'t found. </string>
    <string name="Add_dictionary_from_net">Add dictionary from net</string>
    <string name="TypeThere">Type there</string>
    <string name="checked">Checked</string>
    <string name="english_ukraine">English-Ukraine</string>
    <string name="downloaded">Downloaded</string>
    <string name="EN">English</string>
    <string name="UA">Ukraine</string>
    <string name="RU">Russian</string>
    <string name="PL">Poland</string>
    <string name="df_dictionary_download">Do you want to download the dictionary ?</string>
    <string name="df_dictionary_remove">Do you want to remove the dictionary ?</string>
    <string name="df_dictionary_activate">Do you want to activate the dictionary ?</string>
    <string name="Ok">Ok</string>
    <string name="Cancel">Cancel</string>
</resources>
