<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ua.pp.sanderzet.sanderdict.view.ui.MainActivity">

    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/action_search"
        android:visible="true"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/my_add_dict_from_dir"
        android:title="@string/add_dictionary_from_dir"
        app:showAsAction="never" />
 <item
        android:id="@+id/my_add_dict_from_net"
        android:title="@string/add_dictionary_from_net"
        app:showAsAction="never" />


</menu>
